--- a/backend-techshare/package.json
+++ b/backend-techshare/package.json
@@ -15,10 +15,8 @@
   "license": "ISC",
   "description": "TechShare Backend - A professional tech sharing platform",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/helmet": "^0.0.48",
     "@types/morgan": "^1.9.9",
-    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -43,12 +41,16 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.22",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
-    "@types/node": "^18.19.100",
+    "@types/node": "^18.19.111",
+    "@types/nodemailer": "^6.4.17",
+    "@types/stripe": "^8.0.416",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
