--- a/backend-techshare/package.json
+++ b/backend-techshare/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
+    "prebuild": "npm install",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "test": "jest",
@@ -27,6 +28,10 @@
     "@types/stripe": "^8.0.416",
     "@types/socket.io": "^3.0.2",
     "@types/winston": "^2.4.4",
+    "@types/jest": "^29.5.12",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/ioredis": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -51,13 +56,12 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express-rate-limit": "^6.0.0",
-    "@types/ioredis": "^5.0.0",
-    "@types/jest": "^29.5.12",
-    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
