--- a/frontend-techshare/package.json
+++ b/frontend-techshare/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.15.0",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "postcss-nesting": "^13.0.1",
     "react": "^19.1.0",
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
