--- a/frontend-techshare/package.json
+++ b/frontend-techshare/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/poppins": "^5.2.6",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "@types/react-datepicker": "^6.2.0",
