--- a/frontend-techshare/package.json
+++ b/frontend-techshare/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.16.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "postcss-nesting": "^13.0.1",
     "react": "^19.1.0",
