--- a/frontend-techshare/package.json
+++ b/frontend-techshare/package.json
@@ -17,6 +17,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "@types/react-datepicker": "^6.2.0",
